<?xml version="1.0"?>
<package>
  <name>dlr_hit_hand_ii_hw</name>
  <version>0.0.0</version>
  <description>The dlr_hit_hand_ii_hw package</description>

  <maintainer email="exa371@bham.ac.uk">Ermano Arruda</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend> 
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>control_toolbox</build_depend> 
  <build_depend>controller_manager</build_depend> 
  <build_depend>pluginlib</build_depend> 
  <build_depend>transmission_interface</build_depend> 
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>angles</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_ros</run_depend> 
  <run_depend>control_toolbox</run_depend> 
  <run_depend>controller_manager</run_depend> 
  <run_depend>pluginlib</run_depend> 
  <run_depend>transmission_interface</run_depend> 
  <run_depend>urdf</run_depend>
  <run_depend>angles</run_depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/dlr_hit_hand_ii_hw_sim_plugins.xml"/>
    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>